# nib_standard

./: .gitignore  Makefile  README.md  Taskfile.yml  Vagrantfile  activate.sh  builddeb.py  builddeb.sh  launcher.sh  prep.sh  provision.sh  pyproject.j2  pyproject.toml  setup.cfg  setup.py  testdeb.py  testdeb.sh
.github/workflows/: build.yml
.repo/: rules.toml
debian/: changelog  control  rules  template.links
extensions/ext/: pyproject.toml
extensions/ext/src/ext/: __init__.py
extensions/extc/: README.md  pyproject.toml  setup.cfg  setup.py
extensions/extc/src/extc/: __main__.py
extensions/extcython/: hello.c  hello.pyx  pyproject.toml  setup.cfg  setup.py
extensions/extcython/src/extcython/: __init__.py
extensions/extrust/: .gitignore  Cargo.toml  README.md  pyproject.toml
extensions/extrust/python/extrust/: __init__.py
extensions/extrust/src/: lib.rs
src/nibstandard/: app.py
src/nibstandard/content/: included.py
src/standardnib/: cli.py  core.py
src/template/: __init__.py  __main__.py  app.py  core.py  settings.py
src/template/ux/: cli.py
tests/: test_cmd_info.py
