[tool.poetry]
name = "standardnib"
version = "0.0.1"
description = ""
authors = ["Michael Verhulst <michael@terminallabs.com>"]
readme = "README.md"
packages = [{include = "standardnib", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
flask = "^3.0.0"
highkit = { git = "https://github.com/terminal-labs-bem/high_kit.git", branch = "main" }

[tool.poetry.scripts]
standardnib = 'standardnib.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
