[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "verhulstm", email = "michael@terminallabs.com" }
]
dependencies = [
    "setuptools>=69.5.1",
    "pip>=24.0",
    "click>=8.1.7",
    "pytest>=8.1.1",
    "black>=24.4.0",
    "flake8>=7.0.0",
    "coverage>=7.4.4",
    "psutil>=5.9.8",
    "texttable>=1.7.0",
    "py-cpuinfo>=9.0.0",
    "lowkit @ git+https://github.com/terminal-labs-bem/lowkit.git",
    "highkit @ git+https://github.com/terminal-labs-bem/highkit.git",
    "dllist>=1.1.0",
    "ext @ file:///vagrant/.builder/template-0.1.0/extensions/ext",
    "extc @ file:///vagrant/.builder/template-0.1.0/extensions/extc",
    "extcython @ file:///vagrant/.builder/template-0.1.0/extensions/extcython",
    "extrust @ file:///vagrant/.builder/template-0.1.0/extensions/extrust",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye.workspace]
members = ["/vagrant/.builder/template-0.1.0/extensions/*"]

[project.scripts]
"template" = "template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/template"]
