[project]
name = "extrust"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "verhulstm", email = "michael@terminallabs.com" }
]
dependencies = []
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = []

[tool.maturin]
python-source = "python"
module-name = "extrust._lowlevel"
features = ["pyo3/extension-module"]
